# prufrock

./: .gitignore  README.md  pyproject.toml
prufrock/: __init__.py  assemble.py  cli.py  companion.py  faces.py  intake.py  timeline.py  transcribe.py  voice.py
